# daily-planner

./: .gitignore  LICENSE  README.md  agency.toml  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md  morning-briefing.agent.md
.github/copilot/: mcp.json
.specify/memory/: constitution.md
config/: repos.txt  settings.toml
specs/001-morning-briefing-pdf/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-morning-briefing-pdf/checklists/: requirements.md
specs/001-morning-briefing-pdf/contracts/: mcp-tools.md
specs/005-markdown-briefing-overhaul/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-markdown-briefing-overhaul/checklists/: requirements.md
specs/005-markdown-briefing-overhaul/contracts/: mcp-tools.md
specs/006-agent-debug-logging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-agent-debug-logging/checklists/: requirements.md
specs/006-agent-debug-logging/contracts/: debug-log-format.md
src/daily_planner/: __main__.py  business_day.py  logging.py  server.py
src/daily_planner/config/: loader.py
src/daily_planner/integrations/: ado.py  auth.py  github.py  (+1 more)
tests/contract/: test_tool_schemas.py
tests/integration/: test_ado_client.py  test_debug_logging.py  test_github_client.py  test_render_markdown.py  test_render_pdf.py
tests/unit/: test_business_day.py  test_config_loader.py  test_local_tmpdir.py  test_logging.py  test_models.py  test_repo_activity_tool.py  test_things_reader.py
(+13 files in other folders)
